# datacore-reporter

./: LICENSE.txt  README.md  pyproject.toml  requirements.txt  tools.py
datacore_reporter/: __init__.py  __main__.py  client.py  request.py
docs/: .gitignore  api-reference.rst  conf.py  index.md
