[build-system]
requires = ["setuptools>=61.2.0", "setuptools_scm[toml]>=3.4.3"]
build-backend = "setuptools.build_meta"

[project]
name = "datacore-reporter"
authors = [{ name="Sébastien Hocquet", email="dev@ipamo.net" }]
description = "Extract data easily from your Datacore controllers."
readme = "README.md"
keywords = ["datacore", "symphony", "san", "reporter"]
classifiers = [
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Environment :: Console",
    "Topic :: Software Development :: Libraries",
]
requires-python = ">=3.8" # we use assignment expressions and typing.Literal
scripts = { datacore-reporter = "datacore_reporter.__main__:main" }
dynamic = ["version", "dependencies"]

[project.urls]
Homepage = "https://github.com/ipamo/datacore-reporter"
"Bug Tracker" = "https://github.com/ipamo/datacore-reporter/issues"

[tool.setuptools]
packages = ["datacore_reporter"]

[tool.setuptools_scm]
write_to = "datacore_reporter/_version.py"

[tool.setuptools.dynamic.dependencies]
file = ["requirements.txt"]
